@@ -1,3 +1,9 @@
+2002-11-19  Darin Adler  <darin@apple.com>
+
+	- a fix that gives another 1.5% on the iBench JavaScript test
+
+        * kjs/ustring.cpp: (UString::from): Stop using sprintf to format integers.
+
 2002-11-18  Darin Adler  <darin@apple.com>
 
 	- reduced the creation of Value objects and hoisted the property map
